# crash-handler

./: CMakeLists.txt  README.md
crash_handler/: CMakeLists.txt
crash_handler/include/crash_handler/: crash_handler.hpp
crash_handler/src/: crash_handler.cpp
tests/: CMakeLists.txt  crashing_abort.cpp  crashing_abort_gui.cpp  crashing_exception.cpp  crashing_segmentation_fault.cpp  simple.cpp  simple_args.cpp  simple_sigint_default.cpp  simple_sigint_handled.cpp
